[package]
name = "imogi"
version = "0.1.0"
edition = "2021"

[lib]
name = "imoji"
path = "src/lib.rs"

[[bin]]
name = "imoji-cli"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
itertools = "0.12.1"
